--- a/WindowUtil/.classpath
+++ b/WindowUtil/.classpath
@@ -10,5 +10,6 @@
 	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/5"/>
 	<classpathentry kind="lib" path="jna-5.2.0.jar"/>
 	<classpathentry kind="lib" path="jna-platform-5.2.0.jar"/>
+	<classpathentry kind="lib" path="ThrowingUtil.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
